--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,8 @@
+/* Include tailwind css in project */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html,
 body {
   padding: 0;
@@ -13,4 +18,8 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+.logo {
+  max-width: 64px;
 }
